--- a/web/modules/custom/gatsby_md_post/config/install/core.entity_form_display.node.gatsby_md_post_markdown_post.default.yml
+++ b/web/modules/custom/gatsby_md_post/config/install/core.entity_form_display.node.gatsby_md_post_markdown_post.default.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.node.gatsby_md_post_markdown_post.body
-    - field.field.node.gatsby_md_post_markdown_post.field_image
+    - field.field.node.gatsby_md_post_markdown_post.field_gatsby_md_post_image
     - field.field.node.gatsby_md_post_markdown_post.field_tags
     - image.style.thumbnail
     - node.type.gatsby_md_post_markdown_post
@@ -18,7 +18,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -27,15 +27,15 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_image:
-    weight: 122
+  field_gatsby_md_post_image:
+    weight: 8
     settings:
       preview_image_style: thumbnail
-      insert_default: link
+      insert_default: image
       insert_width: null
       progress_indicator: throbber
       insert_absolute: false
@@ -51,7 +51,7 @@ content:
     type: insert_image
     region: content
   field_tags:
-    weight: 123
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -61,7 +61,7 @@ content:
     region: content
   path:
     type: path
-    weight: 30
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -69,26 +69,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 3
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 6
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 4
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -96,7 +96,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
