--- a/web/modules/custom/gatsby_md_post/config/install/core.entity_view_display.node.gatsby_md_post_markdown_post.teaser.yml
+++ b/web/modules/custom/gatsby_md_post/config/install/core.entity_view_display.node.gatsby_md_post_markdown_post.teaser.yml
@@ -4,6 +4,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.gatsby_md_post_markdown_post.body
+    - field.field.node.gatsby_md_post_markdown_post.field_gatsby_md_post_image
+    - field.field.node.gatsby_md_post_markdown_post.field_tags
     - node.type.gatsby_md_post_markdown_post
   module:
     - text
@@ -26,4 +28,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_gatsby_md_post_image: true
+  field_tags: true
