Added dependency for markdown

--- a/web/modules/custom/gatsby_md_post/composer.json
+++ b/web/modules/custom/gatsby_md_post/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
-        "drupal/insert": "^1.0"
+        "drupal/insert": "^1.0",
+        "drupal/markdown": "^1.3"
     }
 }
